@@ -1,3 +1,12 @@
+2012-09-23  Geoffrey Garen  <ggaren@apple.com>
+
+        I accidentally the whole 32-bit :(.
+
+        Unbreak the DFG in 32-bit with the 32-bit path I forgot in my last patch.
+
+        * dfg/DFGSpeculativeJIT32_64.cpp:
+        (JSC::DFG::SpeculativeJIT::compile):
+
 2012-09-23  Byungwoo Lee  <bw80.lee@gmail.com>
 
         Fix build warnings : -Wunused-parameter, -Wparentheses, -Wuninitialized.
